fixing spacing on mobile

--- a/html/landing_page_styles.css
+++ b/html/landing_page_styles.css
@@ -125,7 +125,7 @@ a {
     }
 
 }
-
+/* Default (desktop) styling */
 .hero {
     display: flex;
     flex-direction: row;
@@ -133,6 +133,13 @@ a {
     max-width: 2000px;
     margin: auto;
     padding-top: 6rem;
+}
+
+/* Mobile styling */
+@media screen and (max-width: 768px) {
+    .hero {
+        padding-top: 1rem;
+    }
 }
 
 .hero_content {
